# controls-study

./: .gitignore  README.md  pyproject.toml
controls_study/: __init__.py
controls_study/controls/: __init__.py  __main__.py  pid_walking.py
controls_study/dynamic_systems/: __init__.py  __main__.py  mass_spring_damper.py
controls_study/practice/: __init__.py
controls_study/study/: __init__.py  __main__.py
src/practice/: mass_spring_damper.py
src/study/: mass_spring_damper.py
