[tool.poetry]
name = "controls_study"
version = "0.1.0"
description = "Controls projects, practice, and study."
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [
    { include = "controls_study" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
matplotlib = "*"
scipy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

